# validator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml  tests.yaml
docs/: conf.py  index.rst  reference.rst
docs/_static/: custom.css
src/validator/: __init__.py  check.py  daff.py  helpers.py  schema.py  targets.py  types.py
src/validator/checks/: __init__.py  column.py  custom.py  table.py  tables.py
src/validator/convert/: __init__.py  frictionless.py
tests/: test_schema.py
