[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["ezwelty <ethan.welty@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.8.2, < 3.10"
pandas = "^1.3.5"
makefun = "^1.12.1"
daff = "^1.3.46"
numpy = "^1.22"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
PyYAML = "^6.0"

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
