[tool.poetry]
name = "validator"
version = "0.1.0"
description = ""
authors = ["ezwelty <ethan.welty@gmail.com>"]

[tool.poetry.dependencies]
python = ">= 3.8.2,< 4.0"
pandas = ">1.3.5"
makefun = "^1.12.1"
daff = "^1.3.46"
numpy = "^1.22"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
PyYAML = "^6.0"

[tool.poetry.group.format.dependencies]
isort = "^5.12.0"
black = "^23.9.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
pydoclint = {version = "^0.3.4", extras = ["flake8"]}

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.isort]
profile = "black"

[tool.black]
skip_string_normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
